# stm32l476-rust-app

./: Cargo.toml  memory.x  openocd.cfg
.cargo/: config.toml
