[package]
edition = "2021"
name = "embassy-boot-stm32l4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.7.0", path = "../embassy/embassy-sync" }
embassy-executor = { version = "0.9.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", path = "../embassy/embassy-time", features = [ "tick-hz-32_768"] }
embassy-stm32 = { version = "0.4.0", path = "../embassy/embassy-stm32", features = ["stm32l476ve", "time-driver-any", "exti"]  }
embassy-boot-stm32 = { version = "0.6.0", path = "../embassy/embassy-boot-stm32", features = [] }
embassy-embedded-hal = { version = "0.5.0", path = "../embassy/embassy-embedded-hal" }
embassy-net = { version = "0.7.1", path = "../embassy/embassy-net", features = ["tcp", "dhcpv4", "medium-ethernet","udp", "medium-ieee802154", "proto-ipv6"] }
embassy-net-enc28j60 = { version = "0.2.1", path = "../embassy/embassy-net-enc28j60", features = [] }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

heapless = { version = "0.8"}
static_cell = { version = "2" }
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-reset = { version = "0.1.1" }
embedded-hal = { version = "0.2.6" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

[features]
defmt = [
      "dep:defmt",
      "dep:defmt-rtt",
      "embassy-stm32/defmt",
      "embassy-boot-stm32/defmt",
      "embassy-time/defmt-timestamp-uptime",
      "embassy-sync/defmt",
      "embassy-net/defmt",
      "embassy-net-enc28j60/defmt"
]
skip-include = []

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
